# perlin-noise

./: CMakeLists.txt  README.md  makefile
src/: main.cpp
